Add styles and positioning to elements

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body class="page">
     <header class="header">
-      <img src="logo" alt="The Olympics logo" />
       <h1 class="header__title text">The Olympics and its stats</h1>
       <p class="header__subtitle text">
         The Olympics is one of the biggest sports event that receives athletes
@@ -18,17 +17,19 @@
         quality of their athletes and other interesting propositions.
       </p>
     </header>
-    <main>
+    <main class="content">
       <section class="country-wealth">
-        <h2 class="country-wealth__title text">Richest countries</h2>
+        <h2 class="country-wealth__title text title">Richest countries</h2>
         <div class="country-wealth__graph"></div>
       </section>
       <section class="medals">
-        <h2 class="medals__title text">Average medals earned by country</h2>
+        <h2 class="medals__title text title">
+          Average medals earned by country
+        </h2>
         <div class="medals__graph"></div>
       </section>
       <section class="correlation">
-        <h2 class="correlation__title text">
+        <h2 class="correlation__title text title">
           Correlation between countries GDP and earned medals
         </h2>
         <div class="correlation__graph"></div>
